@@ -1,5 +1,6 @@
 DEVELOPMENT VERSION
 
+- Calls to .loadedPackages replaced by calls to the base function .packages that does the same
 - Changed the parallel computation backend. The package now is built upon the infra-structure of parallelMap
 - Corrected a small typo on the example of the help page of mcEstimates
 - Added a few new two-class metrics.
